@@ -1,3 +1,11 @@
+2004-05-15  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
+
+	* elfxx-mips.c (MINUS_TWO): Define.
+	(mips_elf_higher, mips_elf_highest,
+	mips_elf_create_dynamic_relocation): Use MINUS_ONE and MINUS_TWO for
+	some bfd_vma values.
+	(_bfd_mips_elf_finish_dynamic_symbol): Likewise. Code cleanup.
+
 2004-05-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* som.c (log2): Rename to exact_log2.  Adjust all callers.
